create github pages

--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-info display-4" href="https://wa.me/380661259741" target="_blank"><span class="socicon socicon-whatsapp mbr-iconfont mbr-iconfont-btn" style="color: rgb(6, 250, 14);"></span>WhatsApp</a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-success display-4" href="https://wa.me/380661259741" target="_blank"><span class="socicon socicon-whatsapp mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>WhatsApp</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="header6 cid-rtfn8umAcK mbr-fullscreen mbr-parallax-background" id="header6-15">
+<section class="engine"><a href="https://mobirise.info/d">free site maker</a></section><section class="header6 cid-rtfn8umAcK mbr-fullscreen mbr-parallax-background" id="header6-15">
 
     
 
@@ -68,7 +68,7 @@
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-1"><br>КАК ЗАРАБОТАТЬ В Инстаграм в 2019-ом году</h1>
                 <p class="mbr-text align-center pb-3 mbr-fonts-style display-2"><strong>онлайн-вебинар<br>КАК С НУЛЯ ВЫЙТИ НА ПРИБЫЛЬ от 390$ и до 2000$<br><br></strong><br></p>
-                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-warning display-5" href="#bottom" target="_blank"><span class="mobi-mbri mobi-mbri-touch mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>ПРИНЯТЬ УЧАСТИЕ</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-info display-5" href="#bottom" target="_blank"><span class="mobi-mbri mobi-mbri-touch mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>ПРИНЯТЬ УЧАСТИЕ</a></div>
             </div>
         </div>
     </div>
@@ -361,7 +361,7 @@
     <div class="container">
         <div class="media-container-row title">
             <div class="col-12 col-md-8">
-                <div class="mbr-section-btn align-center"><a class="btn btn-warning display-7" href="http://eepurl.com/gsQWLb" target="_blank"><span class="mbri-touch mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>ЗАРЕГИСТРИРОВАТЬСЯ ЧЕРЕЗ EMAIL</a> <a class="btn btn-secondary display-7" href="messenger.html#header12-1c" target="_blank"><span class="mbri-touch mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>ЗАРЕГИСТРИРОВАТЬСЯ ЧЕРЕЗ<br>&nbsp;МЕССЕНДЖЕРЫ</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-info display-7" href="http://eepurl.com/gsQWLb" target="_blank"><span class="mbri-touch mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>ЗАРЕГИСТРИРОВАТЬСЯ ЧЕРЕЗ EMAIL</a> <a class="btn btn-danger display-7" href="messenger.html#header12-1c" target="_blank"><span class="mbri-touch mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>ЗАРЕГИСТРИРОВАТЬСЯ ЧЕРЕЗ<br>&nbsp;МЕССЕНДЖЕРЫ</a></div>
             </div>
         </div>
     </div>
@@ -399,7 +399,7 @@
                     </div>
                     <div class="col-12 col-md-4">
                         <div class="b b-mail">
-                            <h5 class="align-left mbr-fonts-style m-0 display-7">Email:</h5>
+                            <h5 class="align-left mbr-fonts-style m-0 display-7"></h5>
                             <p class="mbr-text align-left mbr-fonts-style display-7"></p><p>nikolay.instime@gmail.com&nbsp;<a href="mailto:nikolay.instime@gmail.com"></a><br></p><p></p>
                         </div>
                     </div>
