--- a/vhod.html
+++ b/vhod.html
@@ -49,12 +49,12 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-info display-4" href="https://wa.me/380661259741" target="_blank"><span class="socicon socicon-whatsapp mbr-iconfont mbr-iconfont-btn" style="color: rgb(6, 250, 14);"></span>WhatsApp</a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-success display-4" href="https://wa.me/380661259741" target="_blank"><span class="socicon socicon-whatsapp mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>WhatsApp</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-section form1 cid-rtDGGA04ob" id="form1-1x">
+<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="mbr-section form1 cid-rtDGGA04ob" id="form1-1x">
 
     
 
@@ -72,7 +72,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BbaQuJPgYcJTEi9CvIURw6uYlLGqdyxwjETmm037n7oPYsdGOOJZXcSeXqt0iVMc06uxDMRQeC8wY+GchEnioTbmQ/u7GEQEj0VBGaE0dY9Eu7qNeqxBBWlJLW62n/rN">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Qp+0O3jsinVTUbTaMGem2Jif4kELaCHE88TVcL6SXNg5VYr4LuSKT46GVmM7+EPSo8UQrwdfWNM6eM9kBuyPajuG9XEkEjJog0TyIQRT5l18o6EhuGGkXD9nsJHd94hh">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Ссылка отправлена!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
