--- a/Email.html
+++ b/Email.html
@@ -49,12 +49,12 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-info display-4" href="https://wa.me/380661259741" target="_blank"><span class="socicon socicon-whatsapp mbr-iconfont mbr-iconfont-btn" style="color: rgb(6, 250, 14);"></span>WhatsApp</a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-success display-4" href="https://wa.me/380661259741" target="_blank"><span class="socicon socicon-whatsapp mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>WhatsApp</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build a website</a></section><section class="mbr-section form1 cid-rtFuIG7KcJ" id="form1-21">
+<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="mbr-section form1 cid-rtFuIG7KcJ" id="form1-21">
 
     
 
@@ -72,7 +72,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="GhBDnTGhJU1cwTQlnXzeMbvQsCk6GYDdv6tZ6KV0CjG8x6TApskeAjDEN0u3sPo/ANbfkbkU3bJNTy3xrnXON0c/y/XfBjD8kUTDkyy/rfYSTFHZ3op/fZ1IhyUDC0qM">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="v4DDDTbAo+CCC4JzFcs05BUMpcPM6TCqAxy47ZWATAYkH9Rc1IenwtUrQAkYAum6Yox61O1HfNUz1S38ieI8HyajUQBNSGRnYl2NfZM5uNAkDsj7dpnSxX8cdN3P03t2">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">ПОЗДРАВЛЯЕМ! ВЫ УСПЕШНО ЗАРЕГИСТРИРОВАЛИСЬ! 
 
