--- a/mashurov.html
+++ b/mashurov.html
@@ -49,12 +49,12 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-info display-4" href="https://wa.me/380661259741" target="_blank"><span class="socicon socicon-whatsapp mbr-iconfont mbr-iconfont-btn" style="color: rgb(6, 250, 14);"></span>WhatsApp</a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-success display-4" href="https://wa.me/380661259741" target="_blank"><span class="socicon socicon-whatsapp mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>WhatsApp</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio website templates</a></section><section class="header4 cid-rtDtMqb0pn mbr-parallax-background" id="header4-1n">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="header4 cid-rtDtMqb0pn mbr-parallax-background" id="header4-1n">
 
     
 
