create github pages

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build your own website</a></section><section class="header6 cid-rtfn8umAcK mbr-fullscreen mbr-parallax-background" id="header6-15">
+<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="header6 cid-rtfn8umAcK mbr-fullscreen mbr-parallax-background" id="header6-15">
 
     
 
@@ -141,7 +141,7 @@
           </div>
           <div class="testimonials-caption col-lg-9 col-md-8">
             <div class="user_text ">
-              <p class="mbr-fonts-style  display-7">Самая большая потребность человеческой природы - это потребность чувствовать свою значимость и быть оцененым по достоинству! - эта цитата Алана Пиза частично илюстрирует тот успех, который превратил приложение для обмена фото в самую популярную социальную сеть с 1,7млрд. пользователей. Сегодня это территория, на которой действуют свои правила и возникают свои трудности. Предприниматель всегда ищет проблему и предлагает ее решение. Наше решение за короткий срок способно круто изменить Вашу жизнь.</p>
+              <p class="mbr-fonts-style  display-7">Самая большая потребность человеческой природы - это потребность чувствовать свою значимость и быть оцененым по достоинству! - эта цитата Алана Пиза частично илюстрирует тот успех, который превратил приложение для обмена фото в самую популярную социальную сеть с 1,7 млрд. пользователей. Потребность в самовыражении с одной стороны и искренний интерес миллионов с другой стороны превратили Instagram мощнейшую рекламную площадку. Как на этом "буме" заработать обычному человеку? - не блогеру, не селебрити! Предприниматель всегда ищет проблему и предлагает ее решение. Наше решение за короткий срок способно круто изменить Вашу жизнь.</p>
             </div>
             <div class="user_name mbr-bold mbr-fonts-style align-left pt-3 display-7">
                  Сергей Шевченко</div>
@@ -158,7 +158,7 @@
           </div>
           <div class="testimonials-caption col-lg-9 col-md-8">
             <div class="user_text ">
-              <p class="mbr-fonts-style  display-7">Instagram сегодня действительно удивительное явление, и это позволяет абсолютно любому человеку воспользоваться возможностями, которые появились благодаря интересу к Instagram со стороны миллионов рекламодателей.<br>Способность кооперироваться позволяет достигать "нереальных" результатов!</p>
+              <p class="mbr-fonts-style  display-7">Instagram действительно удивительное явление, и сегодня это позволяет абсолютно любому человеку воспользоваться возможностями, которые появились благодаря интересу к Instagram со стороны миллионов рекламодателей. Тем более, что этот интерес прямо сейчас смещается в сторону микроинфлюинсеров -&nbsp;обычных юзеров соцсетей с небольшой аудиторией (от тысячи человек), что дает возможность дополнительного зарабатка уже на старте.<br><br></p>
             </div>
             <div class="user_name mbr-bold mbr-fonts-style align-left pt-3 display-7">
                  Николай Калиниченко</div>
