create github pages

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="header6 cid-rtfn8umAcK mbr-fullscreen mbr-parallax-background" id="header6-15">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="header6 cid-rtfn8umAcK mbr-fullscreen mbr-parallax-background" id="header6-15">
 
     
 
@@ -102,14 +102,14 @@
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
-                            <p class="mbr-text mb-0 mbr-fonts-style display-5"><strong>Что вы узнаете на мастер-классе:</strong><br><strong>
+                            <p class="mbr-text mb-0 mbr-fonts-style display-5"><strong>Что вы узнаете на мастер-классе:</strong><br>
 <br>-Как я могу зарабатывать в Instagram?
-</strong><br><strong><br>-Как я могу повысить рейтинг </strong><br><strong>своего аккаунта в Instagram?
-</strong><br><strong><br>-Как я могу монетизировать аудиторию в Instagram на -десятки и сотни тысяч долларов?
-</strong><br><strong><br>-Как я могу получить 100К, 200К, 1М или больше живых подписчиков?
-</strong><br><strong><br>-Как я могу развить свой личный бренд, не тратя на это много времени и усилий?
-</strong><br><strong><br>-Как я могу стать популярным и зарабатывать на своем Instagram?
-</strong><br><strong><br>-Как я могу использовать Instagram, чтобы сделать свой бизнес процветающим?</strong></p>
+<br><br>-Как я могу повысить рейтинг <br>своего аккаунта в Instagram?
+<br><br>-Как я могу монетизировать аудиторию в Instagram на -десятки и сотни тысяч долларов?
+<br><br>-Как я могу получить 100К, 200К, 1М или больше живых подписчиков?
+<br><br>-Как я могу развить свой личный бренд, не тратя на это много времени и усилий?
+<br><br>-Как я могу стать популярным и зарабатывать на своем Instagram?
+<br><br>-Как я могу использовать Instagram, чтобы сделать свой бизнес процветающим?</p>
                         </div>
                     </div>
                 </div>
@@ -190,7 +190,7 @@
                     </div>          
                     <div class="step-text-content">
                         <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5">Instagram урезает охваты и меняет алгоритмы.</h4>
-                        <p class="mbr-step-text mbr-fonts-style display-7">Instagram - комерческий проект, который сейчас активно монетизируется. В связи с лавинообразным ростом количества рекламодателей, инстаграм пропорционально урезает охват бесплатных публикаций до 10-5%. Статус "подписчик" больше не означает, что этот человек будет видеть ваши посты. И Вам и потенциальному рекламодателю важен охват вашего профиля.</p>
+                        <p class="mbr-step-text mbr-fonts-style display-7">Instagram - комерческий проект, который сейчас активно монетизируется. В связи с лавинообразным ростом количества желающих распостранить свою информацию, инстаграм пропорционально урезает охват бесплатных публикаций до 10-5%. Статус "подписчик" больше не означает, что этот человек будет видеть ваши посты. И Вам и потенциальному рекламодателю важен охват вашего профиля.</p>
                     </div>
                 </div>
             </div>
