--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="header6 cid-rtfn8umAcK mbr-fullscreen mbr-parallax-background" id="header6-15">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header6 cid-rtfn8umAcK mbr-fullscreen mbr-parallax-background" id="header6-15">
 
     
 
@@ -286,8 +286,8 @@
                     <div id="tab1" class="tab-pane in active" role="tabpanel">
                         <div class="row">
                             <div class="col-md-12">
-                                <p class="mbr-text py-5 mbr-fonts-style display-7">
-                                    Помощь и Поддержка особенно важны. Увеличить охват и вовлеченность поможет Сообщество. Популярность вашего аккаунта ежедневно набирает обороты благодаря сообществу. Обучение тонкостям Instagram и оперативная информация обо всех изменениях алгоритмов Instagram от ТОПовых технических специалистов. Преодоление технических трудностей в продвижении.<br>Поиск партнеров для взаимного пиара и гарантирование выпонения взаимных обязательств сторонами.</p>
+                                <p class="mbr-text py-5 mbr-fonts-style display-7"><em>
+                                    Помощь и Поддержка особенно важны. Увеличить охват и вовлеченность поможет Сообщество. Популярность вашего аккаунта ежедневно набирает обороты благодаря сообществу. Обучение тонкостям Instagram и оперативная информация обо всех изменениях алгоритмов Instagram от ТОПовых технических специалистов. Преодоление технических трудностей в продвижении.<br>Поиск партнеров для взаимного пиара и гарантирование выпонения взаимных обязательств сторонами.</em></p>
                             </div>
                         </div>
                     </div>
