--- a/mashurov.html
+++ b/mashurov.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section class="header4 cid-rtDtMqb0pn mbr-parallax-background" id="header4-1n">
+<section class="engine"><a href="https://mobirise.info/b">create your own site for free</a></section><section class="header4 cid-rtDtMqb0pn mbr-parallax-background" id="header4-1n">
 
     
 
@@ -64,15 +64,15 @@
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="media-content col-md-10">
-                <h1 class="mbr-section-title align-center mbr-white pb-3 mbr-bold mbr-fonts-style display-1">17 июня 19:00 Киев/МСК<br>Вечерний эфир с Вадимом Машуровым</h1>
+                <h1 class="mbr-section-title align-center mbr-white pb-3 mbr-bold mbr-fonts-style display-1">19 июня 19:00 Киев/МСК<br>Вечерний эфир с Вадимом Машуровым</h1>
                 <h3 class="mbr-section-subtitle align-center mbr-white mbr-light pb-3 mbr-fonts-style display-2">Об Instagram от сооснователя Instime.&nbsp;</h3>
                 <div class="mbr-text align-center mbr-white pb-3">
                     <p class="mbr-text mbr-fonts-style display-5"></p>
                 </div>
-                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-primary display-4" href="vhod.html">ВОЙТИ</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-warning display-4" href="http://eepurl.com/gvg86D" target="_blank">ПРИНЯТЬ УЧАСТИЕ</a></div>
             </div>
             <div class="mbr-figure pt-5">
-                <img src="assets/images/e6299012c5cb50538ec5b-1-1260x630.jpg" alt="Mobirise" title="" style="width: 60%;">
+                <img src="assets/images/356376b1f6b7bf807c3d5-1260x630.jpg" alt="Mobirise" title="" style="width: 60%;">
             </div>
         </div>
     </div>
