create github pages

--- a/vhod.html
+++ b/vhod.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="header5 cid-rtQQkhwC2M mbr-fullscreen" id="header5-23">
+<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><section class="header5 cid-rtQQkhwC2M mbr-fullscreen" id="header5-23">
 
     
 
